PyMaker/datas/object2/RawHTML/i19701/Python_DOC_referPages.trying-to-use-sqlite-with-python-shell.txt
<div class="post-text" itemprop="text">
<p>I just got python and typing:</p>
<p>sqlite test.db</p>
<p>..into the shell, but I get a syntax error....what have I missed?</p>
</div>
<div class="post-text" itemprop="text">
<p>I guess that you did the following?</p>
<pre><code>$ python
Python 2.7.3 (default, Sep 26 2012, 21:51:14) 
[GCC 4.7.2] on linux2
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; sqlite test.db
  File "&lt;stdin&gt;", line 1
    sqlite test.db
              ^
SyntaxError: invalid syntax
</code></pre>
<p>Try this instead:</p>
<pre><code>import sqlite3
conn = sqlite3.connect('test.db')
cursor = conn.cursor()
cursor.execute('''Your query goes here''')
</code></pre>
<p>For more details, take a look at the sqlite documentation for <a href="https://docs.python.org/2/library/sqlite3.html" rel="nofollow noreferrer">python2</a> or <a href="https://docs.python.org/3/library/sqlite3.html" rel="nofollow noreferrer">python3</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Python doesn't provide this command-line utility so make sure <a href="https://www.sqlite.org/download.html" rel="nofollow">sqlite3</a> is in your path. Then you can either execute:</p>
<pre><code>$ sqlite3 mydb.db
</code></pre>
<p>or if you have entered your settings in <strong>settings.py</strong>:</p>
<pre><code>./manage.py dbshell
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Verify if sqlite exist in PATH and what are privileges for file test.db</p>
</div>
<div class="post-text" itemprop="text">
<p>I think you want  to use the sqlite3 command line tool to create a new database. For this you should use your system terminal not the python console. So the command should look like so (on a linux system):</p>
<pre><code>$ sqlite3 test.db
</code></pre>
</div>
<span class="comment-copy">What shell do you use?</span>
<span class="comment-copy">I think you missed reading the documentation, especially the Python language tutorial.  Try that first.</span>
<span class="comment-copy">sqlite test.db is valid command in cmd or terminal not in python shell</span>
